--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-hi ...
+<style>
+#parent {display: table;}
+
+#child {
+    display: table-cell;
+    vertical-align: middle;
+}</style>
+
+<div id="parent">
+    <div id="child">Foo.</div>
+</div>
