--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
-<style>
-#parent {display: table;}
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<html lang="en">
+<head>
+	<meta http-equiv="content-type" content="text/html; charset=iso-8859-1">
+	<title>isaiahb.com</title>
+	<style type="text/css">
+		#content	{ position:absolute; top:50%; left:50%; height:2em; margin-top:-1em; width:40%; margin-left:-20%; line-height:2em; text-align:center;background-color:white }
+	</style>
+</head>
+<body>
+<p id="content">Foo.</p>
+</body>
+</html>
 
-#child {
-    display: table-cell;
-    vertical-align: middle;
-}</style>
-
-<div id="parent">
-    <div id="child">Foo.</div>
-</div>
